@@ -4,4 +4,4 @@
 # See COPYING for distribution information.
 # $Id$
 
-VERSION = '0.3.1'
+VERSION = '0.4-dev'
